# sandbox2

./: .clang-tidy  .gitignore  CMakeLists.txt  LICENSE.txt  README.md  conanfile.py
src/: CMakeLists.txt  discoverable_setters.cpp  dynstruct.cpp  hello.cpp  out_stream.cpp  reflection_before_main.cpp  say_my_name.cpp  sequences.cpp  synchro.cpp  tooples.cpp
